Object "Display as wire" displays as solid mesh in EEVEE (next). #122980
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#122980
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 552.22
Blender Version
Broken: version: 4.2.0 Beta, branch: blender-v4.2-release, commit date: 2024-06-08 19:07, hash:
965a13867111
Worked: (newest version of Blender that worked as expected)
Short description of error
object/meshes don't display correctly anymore as wireframe in 4.2 Beta
Exact steps for others to reproduce the error
Object > viewport display > display as wire
Eevee will show solid mesh still.
in workbench it still works:
Hi, thanks for the report. Both cycles and eevee-next has same results here.
Not sure if this would be classified as bug. Forwarding to eevee devs...
We changed the behavior to match cycles. The reasoning is, if the current behavior needs to change, it should change for both engine.
I will add it in the release notes.
Hum the issue is that it's OK in Cycles as we can use ray visibility as a workaround, to maintain this thing not visible as solid. But we do'nt have ray visibility in Eevee, so something in wireframe, aka invisible as solid, does appear solid now, without workaround to not have it solid like in Cycles.
it basically means that Wire viewport display is now only supported in Workbench, (and cycles with workaround) and is ignored in eevee. I think it's more logical to keep it inconsistent between eevee & cycles, or have it wireframed/invisible in cycles, rather than this, as it just removes a feature, If I understand correctly.
We can add the camera visibility toggle in EEVEE too. I wanted to implement it anyway. So that's just a new motivation for it.
Rad, so it would be even more consistent across render engine.
Totally off-topic and should be posted on right-click-select, but the biggest UX issue I had recently is not being able to keyframe collection (enable, viewport, render ect..) and having to make collection instances instead (and thus toggling back & forth)
If we could directly keyframe collection visibilities, so nearly assign them to markers like cameras, we could build shots super fast. So one marker would define the camera, and all the set dressing and lights specific to that shot. 1 click instead of like 50 back & forth between colection & instance.
(we're doing an entire short film in a single blend scene basically) anyway, just in case it falls into the right ear haha.
Sorry offtopic again, but on the same Engine consistency topic:
It would be great to have the limit texture size option inside Simplify for Eevee too, like Cycles, as currently it's in the prefs (for workbench & eevee) and it's really hard to change quick, unlike simplify.
This still needs to be ironed out, as from 4.2 we cannot work with volumetrics anymore: In Texture mode they appear in eevee in Cycles, but occlude everything in Workbench mode. And in Wire mode they work in Workbench as you can still see your scene, but they're invisible in eevee & cycles.
Example images & not good enough workaround described here:
blender/blender#123265
Before 4.2 it works perfectly: Wire mode makes volumetrics not occlude everything in Workbench, and they still render in eevee and Cycles. So pre 4.2 we could work with volumetrics, post we can't anymore with our work viewport in workbench +camera viewport in evee or cycles for example. it's one or the other...
@loicbramoulle : could you just open a report specifically for this (Volumes)?
Think this issue has too much unrelated (mesh) info and is just hard to keep track of.
Thx in advance! (but will close this one again)