EEVEE: Add Ray Visibility > Camera support

FIx #122980.

Pull Request: https://projects.blender.org/blender/blender/pulls/123248